samples/_failures_safe/1761439957_f84b40_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_87689b6f.c: In function ‘main’:
./samples/SAFE/__tmp_87689b6f.c:148:5: error: expected declaration or statement at end of input
  148 |     print_matrix(&matrix_b, "B");
      |     ^~~~~~~~~~~~
